syntax = "proto3";

package auth;

option go_package = "./authpb";

service AuthService {
  rpc Authenticate (AuthRequest) returns (AuthResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message AuthRequest {
    string email = 1;
    string password = 2;
    string hashed_password = 3;
    string user_id = 4;
}

message AuthResponse {
    string token = 1;
    string user_id = 2;
    bool valid = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
}
